--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "private": true,
   "scripts": {
     "install": "elm make",
-    "test": "elm-doc-test && elm-test --compiler ./node_modules/.bin/elm"
+    "test": "elm-verify-examples --elm-test-args=\"--compiler ./node_modules/.bin/elm\" && rm -rf elm-stuff && elm-test --compiler ./node_modules/.bin/elm"
   },
   "author": "Allo-Media <contact@allo-media.net>",
   "license": "MIT",
   "devDependencies": {
     "elm": "^0.19.0",
     "elm-analyse": "^0.14.2",
-    "elm-doc-test": "^4.0.0",
     "elm-format": "^0.8.0",
-    "elm-test": "^0.19.0-beta4",
+    "elm-test": "beta",
+    "elm-verify-examples": "^3.0.0",
     "request": "^2.88.0"
   }
 }
