--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
-
 jobs:
   build:
     branches:
@@ -8,45 +11,81 @@ jobs:
     docker:
       - image: circleci/node:10
 
+    # working_directory: ~/repo
+
     steps:
       - checkout
 
       - restore_cache:
           keys:
-          - deps-{{ checksum "package.json" }}
-          - deps-
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
 
-      - run:
-          name: Set PATH
-          command: echo 'export PATH=./node_modules/.bin:$PATH' >> $BASH_ENV
-
-      - run:
-          name: Install dependencies
-          working_directory: .
-          command: |
-            npm install
+      - run: npm install
 
       - save_cache:
           paths:
             - node_modules
-          key: deps-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run:
-          name: Run static code analysis
-          working_directory: .
-          command: |
-            elm-analyse
+      - run: npm test
 
-      - run:
-          name: Run tests
-          working_directory: .
-          command: |
-            mkdir -p test-reports
-            npm test
-
-      - store_artifacts:
-          path: test-reports/
-          destination: tr1
-
-      - store_test_results:
-          path: test-reports/
+#
+# version: 2
+#
+# jobs:
+#   build:
+#     branches:
+#       ignore: gh-pages
+#
+#     docker:
+#       - image: circleci/node:10
+#
+#     steps:
+#       - checkout
+#
+#       - restore_cache:
+#           keys:
+#           - deps-{{ checksum "package.json" }}
+#           - deps-
+#
+#       - run:
+#           name: Set PATH
+#           command: echo 'export PATH=./node_modules/.bin:$PATH' >> $BASH_ENV
+#
+#       - run:
+#           name: Install dependencies
+#           working_directory: .
+#           command: |
+#             npm install
+#
+#       - save_cache:
+#           paths:
+#             - node_modules
+#           key: deps-{{ checksum "package.json" }}
+#
+#       - run:
+#           name: Run static code analysis
+#           working_directory: .
+#           command: |
+#             elm-analyse
+#
+#       - run:
+#           name: Run tests
+#           working_directory: .
+#           command: |
+#             mkdir -p test-reports
+#             npm test
+#
+#       - store_artifacts:
+#           path: test-reports/
+#           destination: tr1
+#
+#       - store_test_results:
+#           path: test-reports/
+#
+# workflows:
+#   version: 2
+#   build-all:
+#     jobs:
+#       - build
