--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       ignore: gh-pages
 
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:lts-stretch
 
     steps:
       - checkout
