--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Allo-Media <contact@allo-media.net>",
   "license": "MIT",
   "devDependencies": {
-    "elm": "^0.19.0",
+    "elm": "0.19.0-no-deps",
     "elm-analyse": "^0.16.4",
-    "elm-format": "^0.8.0",
-    "elm-test": "beta",
-    "elm-verify-examples": "^3.0.0",
+    "elm-format": "^0.8.1",
+    "elm-test": "^0.19.0-rev6",
+    "elm-verify-examples": "^3.1.0",
     "request": "^2.88.0"
   }
 }
